# Omlyme

./: .gitignore  CMakeLists.txt  CPMNuker.pyproj  CPMNuker.sln  README.md  base64.cpp  cpmnuker.cpp  cpmnuker.py  main.cpp  main.py  requirements.txt
.github/workflows/: c-cpp.yml
include/: asker.hpp  base64.hpp  cpmnuker.hpp  progressbar.hpp
